--- a/user_blog/templates/base.html
+++ b/user_blog/templates/base.html
@@ -7,6 +7,8 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     <link rel="icon" href="{% static 'img/logo.png' %}" type="image/x-icon" />
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
