--- a/user_blog/templates/blog_template.html
+++ b/user_blog/templates/blog_template.html
@@ -1,68 +1,33 @@
-{% extends "base.html" %} 
-{% block title %}Blog Manager{% endblock %} 
+{% extends "base.html" %}
+{% block title %}Preview Blog{% endblock %}
 {% block content %}
 
-<table class="min-w-full divide-y divide-gray-200">
-  <thead class="bg-gray-50">
-    <tr>
-      <th
-        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-      >
-        ID
-      </th>
-      <th
-        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-      >
-        Title
-      </th>
-      <th
-        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-      >
-        Author
-      </th>
-      <th
-        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-      >
-        Thumbnail
-      </th>
-      <th
-        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-      >
-        Content
-      </th>
-      <th
-        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-      >
-        Actions
-      </th>
-    </tr>
-  </thead>
-  <tbody class="bg-white divide-y divide-gray-200">
-    {% for i in data %}
-    <tr>
-      <td class="px-6 py-4 whitespace-nowrap">{{ forloop.counter }}</td>
-      <td class="px-6 py-4 whitespace-nowrap">{{ i.title }}</td>
-      <td class="px-6 py-4 whitespace-nowrap">{{ i.author }}</td>
-      <td class="px-6 py-4 whitespace-nowrap">
-        <img src="{{ i.thumbnail }}" class="h-14 w-14 object-cover" alt="Image Thumbnail"/>
 
-      </td>
-      <td class="px-6 py-4 whitespace-nowrap">
-        <a href="" class="text-indigo-600 hover:text-indigo-900"
-          >Preview</a>
-      </td>
-      <td class="px-6 py-4 whitespace-nowrap">
-        <a
-          href=""
-          class="text-yellow-600 hover:text-yellow-900 mr-2"
-          >Edit</a
-        >
-        <a href="" class="text-red-600 hover:text-red-900"
-          >Delete</a
-        >
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+<div
+  class="w-5/6 mx-auto h-56 border-b-gray-400/20 border-b-[1px] relative overflow-hidden"
+>
+  <img src="{{data.thumbnail }}" alt="Thumbnail"
+    alt="banner"
+    class="object-cover w-full h-full"
+  />
+
+
+  <div
+    class="absolute inset-0 bg-gradient-to-b from-transparent to-gray-600/60"
+  ></div>
+</div>
+<div class="mx-auto w-full md:w-5/6 p-4 mt-4 space-y-4 font-poppins">
+  <h1 class="text-4xl font-bold tracking-wide mt-4">{{ data.title }}</h1>
+  <p class="font-medium text-slate-600">
+    Published by :
+    <span class="text-blue-700">{{ data.author }}</span>
+    &nbsp;
+    <span class="text-slate-400 text-sm font-normal"
+      >{{ data.date_created }}</span
+    >
+  </p>
+  <div class="prose max-w-screen-lg">{{ data.content| safe }}</div>
+</div>
+
 {% endblock %}
+
