--- a/user_blog/templates/blog_template.html
+++ b/user_blog/templates/blog_template.html
@@ -26,7 +26,7 @@
       >{{ data.date_created }}</span
     >
   </p>
-  <div class="prose max-w-screen-lg">{{ data.content| safe }}</div>
+  <div class="prose max-w-screen-lg">{{ data.content}}</div>
 </div>
 
 {% endblock %}
